--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p{ padding-right: 20px;}
 
 .card1{background-color:#00b39b;;
     text-align: left;
-  
+  justify-content: left;
     font-size:x-large;
     height: 290px;
         width: 230px;
@@ -67,7 +67,7 @@ p{ padding-right: 20px;}
 
 .card2{background-color:rgb(8, 117, 195);
     text-align: left;
-  
+  justify-content: center;
     font-size:x-large;
     height: 290px;
     width: 220px;
@@ -78,7 +78,7 @@ p{ padding-right: 20px;}
 }
 
 .card3{background-color:rgb(36, 39, 42);
-    text-align: left;
+    text-align:right;
     font-size:x-large;
     height: 290px;
     width: 230px;
@@ -208,6 +208,4 @@ font-family: Work Sans, Arial, sans-serif;
         font-family: Work Sans, Arial, sans-serif;
         font-weight: 300;
         letter-spacing: -0.5px;
-        text-align: center;
-
-    }
+        text-align: center}
